# clang-tool-chain-bins

./: .gitattributes  .gitignore  BUILD_IWYU_MACOS_STATIC.md  BUILD_MACOS_EMSCRIPTEN.md  CLAUDE.md  CLEANUP_OLD_VERSIONS.md  CODEX.md  Cargo.toml  Dockerfile.linux-test  MIGRATION_ISSUE.md  MIGRATION_STEPS.md  README.md  TASK.md  index.css  index.html  index.js  publish  pyproject.toml
.cargo/: config.toml
.github/workflows/: auto-release.yml  build-clang-extra.yml  build-lldb-archives-linux.yml  build-macos-emscripten.yml  build-macos-llvm.yml  ci.yml  release.yml
assets/clang/: README.md  manifest.json
assets/clang-extra/: manifest.json
assets/clang-extra/darwin/arm64/: clang-extra-21.1.6-darwin-arm64.tar.zst  clang-extra-21.1.6-darwin-arm64.tar.zst.json  clang-extra-21.1.6-darwin-arm64.tar.zst.provenance.json  clang-extra-21.1.6-darwin-arm64.tar.zst.sha256  manifest.json
assets/clang-extra/darwin/x86_64/: clang-extra-21.1.6-darwin-x86_64.tar.zst  clang-extra-21.1.6-darwin-x86_64.tar.zst.json  clang-extra-21.1.6-darwin-x86_64.tar.zst.provenance.json  clang-extra-21.1.6-darwin-x86_64.tar.zst.sha256  manifest.json
assets/clang-extra/linux/arm64/: clang-extra-21.1.5-linux-arm64.tar.zst  clang-extra-21.1.5-linux-arm64.tar.zst.json  clang-extra-21.1.5-linux-arm64.tar.zst.provenance.json  clang-extra-21.1.5-linux-arm64.tar.zst.sha256  manifest.json
assets/clang-extra/linux/x86_64/: clang-extra-21.1.5-linux-x86_64.tar.zst  clang-extra-21.1.5-linux-x86_64.tar.zst.json  clang-extra-21.1.5-linux-x86_64.tar.zst.provenance.json  clang-extra-21.1.5-linux-x86_64.tar.zst.sha256  manifest.json
assets/clang-extra/win/arm64/: clang-extra-21.1.5-win-arm64.tar.zst  clang-extra-21.1.5-win-arm64.tar.zst.json  clang-extra-21.1.5-win-arm64.tar.zst.provenance.json  clang-extra-21.1.5-win-arm64.tar.zst.sha256  manifest.json
assets/clang-extra/win/x86_64/: clang-extra-21.1.5-win-x86_64.tar.zst  clang-extra-21.1.5-win-x86_64.tar.zst.json  clang-extra-21.1.5-win-x86_64.tar.zst.provenance.json  clang-extra-21.1.5-win-x86_64.tar.zst.sha256  manifest.json
assets/clang/darwin/: manifest.json
assets/clang/darwin/arm64/: llvm-21.1.6-darwin-arm64.tar.zst  llvm-21.1.6-darwin-arm64.tar.zst.json  manifest.json  (+2 more)
assets/clang/linux/: manifest.json
assets/clang/win/: CHECKSUMS.txt  MANIFEST.txt  manifest.json
assets/cosmocc/: cosmocc-universal-4.0.2.tar.zst  cosmocc-universal-4.0.2.tar.zst.json  cosmocc-universal-4.0.2.tar.zst.sha256  manifest-universal.json  manifest.json
assets/emscripten/: README.md  manifest.json
assets/iwyu/: DOWNLOAD_SUMMARY.md  archive_results.json
assets/iwyu/win/: .BUILDINFO  .MTREE  mingw-w64-x86_64-include-what-you-use-0.25-1-any.pkg.tar.zst  temp.tar
assets/lldb/: archive_results.json  manifest.json
assets/mingw/: README.md  manifest.json
assets/nodejs/: README.md
assets/valgrind/: manifest.json
ci/: release_checks.py  release_lint.py  release_workflow.py
ci/clangd/: CMakeLists.txt  README.md  conanfile.py
clang/darwin/: manifest.json
clang/darwin/arm64/: llvm-19.1.7-darwin-arm64.tar.zst.md5  llvm-19.1.7-darwin-arm64.tar.zst.sha256  manifest.json
clang/darwin/x86_64/: llvm-19.1.7-darwin-x86_64.tar.zst.sha256  manifest.json
clang/linux/: manifest.json
clang/linux/arm64/: llvm-21.1.5-linux-arm64.tar.zst.sha256  manifest.json
clang/linux/x86_64/: llvm-21.1.5-linux-x86_64.tar.zst.md5  llvm-21.1.5-linux-x86_64.tar.zst.sha256  manifest.json
clang/win/x86_64/: llvm-21.1.5-win-x86_64.tar.zst.md5  llvm-21.1.5-win-x86_64.tar.zst.sha256  manifest.json
clang_tool_chain_bins/: __init__.py  cli.py
clang_tool_chain_bins/_impl/: __init__.py  archive_index.py  cli.py  common.py  download_sources.py  install.py  json_utils.py  query.py
clang_tool_chain_bins/_impl/data/: tool-index.json
crates/ctcb-archive/: Cargo.toml
crates/ctcb-archive/src/: lib.rs
crates/ctcb-checksum/: Cargo.toml
crates/ctcb-checksum/src/: lib.rs
crates/ctcb-cli/: Cargo.toml
crates/ctcb-cli/src/: lib.rs  main.rs  python.rs
crates/ctcb-core/: Cargo.toml
crates/ctcb-core/src/: lib.rs
crates/ctcb-dedup/: Cargo.toml
crates/ctcb-dedup/src/: lib.rs
crates/ctcb-download/: Cargo.toml
crates/ctcb-download/src/: lib.rs
crates/ctcb-manifest/: Cargo.toml
crates/ctcb-manifest/src/: lib.rs
crates/ctcb-split/: Cargo.toml
crates/ctcb-split/src/: lib.rs
crates/ctcb-strip/: Cargo.toml
crates/ctcb-strip/src/: lib.rs
docs/: RELEASE.md
iwyu/darwin/arm64/: iwyu-0.25-darwin-arm64.tar.zst  manifest.json
iwyu/darwin/x86_64/: iwyu-0.25-darwin-x86_64.tar.tar.zst.sha256  iwyu-0.25-darwin-x86_64.tar.zst  manifest.json  sbom.spdx.json
iwyu/linux/arm64/: iwyu-0.25-linux-arm64.tar.tar.zst.sha256  manifest.json
iwyu/linux/x86_64/: iwyu-0.25-linux-x86_64.tar.zst  manifest.json
iwyu/win/: .PKGINFO
iwyu/win/x86_64/: manifest.json
python/clang_tool_chain_bins/: __init__.py
python/tests/: test_public_api.py
tests/: test_api.py  test_archive_indexes.py  test_clang_extra_builder.py  test_clang_extra_validator.py  test_download_sources.py  test_download_urls.py  test_install.py  test_manifest_integrity.py  test_query.py
tools/: .gitignore  README.md  README_EMSCRIPTEN_DOCKER.md  __init__.py  __main__.py  archive_index.py  build_iwyu_macos.py  cli.py  common.py  create_clang_extra_archives.py  create_hardlink_archive.py  create_iwyu_archives.py  create_lldb_archives.py  deduplicate_binaries.py  download_binaries.py  download_sources.py  expand_archive.py  extract_clang_archive.py  extract_iwyu_from_homebrew.py  extract_libunwind_docker.py  extract_mingw_sysroot.py  extract_python_for_lldb.py  fetch_and_archive.py  fetch_and_archive_cosmocc.py  fetch_and_archive_emscripten.py  fetch_and_archive_emscripten_docker.py  fetch_and_archive_nodejs.py  install.py  integrate_clang_extra_artifacts.py  integrate_lldb_linux_archives.py  json_utils.py  prepare_python_for_linux_lldb.py  publish.py  query.py  split_archive.py  strip_binaries.py  test_compression.py  validate_clang_extra.py  validate_clang_extra_install.py
tools/data/: index-meta.json  tool-index.json
(+144 files in other folders)
