[workspace]
members = [
    "crates/ctcb-core",
    "crates/ctcb-checksum",
    "crates/ctcb-archive",
    "crates/ctcb-dedup",
    "crates/ctcb-download",
    "crates/ctcb-strip",
    "crates/ctcb-manifest",
    "crates/ctcb-split",
    "crates/ctcb-cli",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/zackees/clang-tool-chain-bins"
homepage = "https://github.com/zackees/clang-tool-chain-bins"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
zstd = "0.13"
tar = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib", "abi3-py310"] }
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
tempfile = "3"
futures-util = "0.3"
