[project]
name = "clang-tool-chain-bins"
version = "0.1.0"
description = "LLVM/Clang Toolchain Build Tools - Maintainer scripts for creating and managing LLVM/Clang toolchain binary archives"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fasteners>=0.19.0",
    "json5>=0.9.0",
    "zstandard>=0.22.0",
    "pyzstd>=0.15.0",
]

[project.scripts]
# Query/install frontend
clang-tool-chain-bins = "tools.cli:main"
clang-tool-chain-bins-index = "tools.archive_index:main"
clang-tool-chain-bins-publish = "tools.publish:main"

# Main pipeline
fetch-and-archive = "tools.fetch_and_archive:main"

# Individual component scripts
download-binaries = "tools.download_binaries:main"
strip-binaries = "tools.strip_binaries:main"
deduplicate-binaries = "tools.deduplicate_binaries:main"
create-hardlink-archive = "tools.create_hardlink_archive:main"
expand-archive = "tools.expand_archive:main"
test-compression = "tools.test_compression:main"
create-iwyu-archives = "tools.create_iwyu_archives:main"
extract-mingw-sysroot = "tools.extract_mingw_sysroot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
include = [
    "tools/**/*.py",
    "tools/data/**/*.json",
    "README.md",
]
exclude = [
    "tools/.gitignore",
    "tools/*.md",
    "tools/work/**",
    "tools/work_nodejs/**",
    "tools/__pycache__/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "/tools",
    "/tests",
    "/README.md",
    "/TASK.md",
    "/pyproject.toml",
]
exclude = [
    "/.gitignore",
    "/tools/.gitignore",
    "/tools/*.md",
    "/tools/work/**",
    "/tools/work_nodejs/**",
    "/assets/**/*.tar.zst",
    "/dist/**",
    "/tmp_extract/**",
]

[tool.uv]
dev-dependencies = []
