[package]
name = "ctcb-archive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tar and zstd archive creation/extraction for clang toolchain binary builder"

[dependencies]
tar = { workspace = true }
zstd = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
flate2 = { workspace = true }
ctcb-core = { path = "../ctcb-core", version = "0.4.1" }

[dev-dependencies]
tempfile = { workspace = true }
