[package]
name = "ctcb-checksum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SHA256 and MD5 file hashing for clang toolchain binary builder"

[dependencies]
sha2 = { workspace = true }
md-5 = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
