[package]
name = "ctcb-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
ctcb-core = { path = "../ctcb-core" }
futures-util = { workspace = true }
