[package]
name = "ctcb-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Two-tier manifest JSON management for clang toolchain binary builder"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ctcb-core = { path = "../ctcb-core", version = "0.4.1" }

[dev-dependencies]
tempfile = { workspace = true }
