[package]
name = "ctcb-strip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLVM binary stripping and filtering for clang toolchain binary builder"

[dependencies]
walkdir = { workspace = true }
anyhow = { workspace = true }
ctcb-core = { path = "../ctcb-core", version = "0.4.1" }

[dev-dependencies]
tempfile = { workspace = true }
